# django-spaday

./: .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  conftest.py  factories.py  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py
django_project/: README.md  settings.py  urls.py  wsgi.py
django_spaday/: apps.py  models.py  settings.py  utils.py  views.py
django_spaday/api/: pagination.py  permissions.py  renderers.py  serializers_.py  urls.py  utils.py  views.py  viewsets.py
django_spaday/api/serializers/: __init__.py  auditlog.py  auth.py  deleted.py  filters.py
django_spaday/api/tests/: test_pagination.py  test_utils.py
django_spaday/templates/spaday/: vue.html
django_spaday/tests/: conftest.py  factories.py  test_api.py  test_serializers.py  test_utils.py
requirements/: requirements_dev.txt
src/django_spaday/: settings.py  urls.py  utils.py
src/django_spaday/api/: pagination.py  renderers.py  urls.py  utils.py  views.py
src/django_spaday/api/serializers/: auditlog.py  auth.py  django_celery_results.py
src/django_spaday/management/commands/: export_perms.py
src/django_spaday/migrations/: 0001_initial.py
src/django_spaday/templates/includes/: favicons.html
src/django_spaday/templates/spaday/: vue.html
tests/: README.md  api_router.py  conftest.py  factories.py  settings.py  test_api.py  test_pagination.py  test_serializers.py  test_utils.py  urls.py
